@@ -675,6 +675,8 @@ void collectNonBinaryImplicationData(
 
          if( implboundtypes[w] == SCIP_BOUNDTYPE_UPPER )
          {
+            SCIP_Bool redundant;
+
             idx += nvars;
 
             assert(counts[idx] <= pos - nredvars + 1);
@@ -692,8 +694,11 @@ void collectNonBinaryImplicationData(
                break;
             }
 
+            /* ignore implications that are redundant with respect to the current global bounds (see #2888) */
+            redundant = SCIPisLE(scip, SCIPvarGetUbGlobal(implvars[w]), implbounds[w]);
+
             /* update implication counter and implied upper bound */
-            if( counts[idx] == pos - nredvars )
+            if( counts[idx] == pos - nredvars && !redundant )
             {
                ++counts[idx];
 
@@ -742,6 +747,8 @@ void collectNonBinaryImplicationData(
          }
          else
          {
+            SCIP_Bool redundant;
+
             assert(counts[idx] <= pos - nredvars + 1);
 
             /* set variable 'var' with bound implies other set variable 'implvars[w]' with a non-worse bound than the
@@ -757,8 +764,11 @@ void collectNonBinaryImplicationData(
                break;
             }
 
+            /* ignore implications that are redundant with respect to the current global bounds (see #2888) */
+            redundant = SCIPisGE(scip, SCIPvarGetLbGlobal(implvars[w]), implbounds[w]);
+
             /* update implication counter */
-            if( counts[idx] == pos - nredvars )
+            if( counts[idx] == pos - nredvars && !redundant )
             {
                ++counts[idx];
 
