@@ -605,6 +605,7 @@ Fixed bugs
 - fixed bug in sepa_oddcylce when variables are fixed
 - fixed numerical issues related to tighter constraint sides in varbound constraint handler
 - fixed update of watchedvars in logicor constraint handler in case of a restart during the tree
+- handle special case of redundant implications
 
 Miscellaneous
 -------------
